--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ JWT_EXPIRATION_TIME=3600
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=movies
-POSTGRES_HOST=localhost
+POSTGRES_DB=mydb
+POSTGRES_HOST=127.0.0.1
